--- a/frontend/templates/frontend/home.html
+++ b/frontend/templates/frontend/home.html
@@ -19,8 +19,8 @@
                                 <h2 class="slider-pararp">UAE with us!</h2>
                                 <h4 class="slider-pararp">Find awesome UAE tours, hotels, tours, cars and packages and Top rated Desert Safari in dubai</h4>
                                 <div class="home_two_button btn-animation">
-                                    <a href="" class="btn btn_theme_white btn_md">Discover </a>
-                                    <a href="" class="btn btn_theme_transparent btn_md">Know
+                                    <a href="{% url 'all-tours-grid' %}" class="btn btn_theme_white btn_md">Discover </a>
+                                    <a href="{% url 'outbounds' %}" class="btn btn_theme_transparent btn_md">Know
                                         more</a>
                                 </div>
                             </div>
@@ -29,24 +29,8 @@
                 </div>
             </div>
             <div class="banner_two_slider_item fadeInUp" data-wow-duration="2s"
-                style="background-image: url(/static/assets/img/banner/banner-two-bg-2.png);">
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-lg-6">
-                            <div class="banner_two_text">
-                                <h3 class="title">Arabian Knights Tours</h3>
-                                <h1 class="slider-sttle">EXPLORE</h1>
-                                <h2 class="slider-pararp">The world with us!</h2>
-                                <h4 class="slider-pararp">Find awesome flights, hotel, tour, car and packages</h4>
-                                <div class="home_two_button btn-animation">
-                                    <a href="top-destinations.html" class="btn btn_theme_white btn_md">Discover</a>
-                                    <a href="top-destinations.html" class="btn btn_theme_transparent btn_md">Know
-                                        more</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                style="background-image: url(/static/assets/img/banner/banner2.jpg);">
+                
             </div>
             <div class="banner_two_slider_item fadeInUp" data-wow-duration="2s"
                 style="background-image: url(/static/assets/img/banner/banner-two-bg-3.png);">
