--- a/tour/templates/tour/all_tours_grid.html
+++ b/tour/templates/tour/all_tours_grid.html
@@ -68,7 +68,7 @@
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                     <div class="section_heading_center">
-                        <h2>{{ tour_count }}</h2>
+                        <h2>{{ tour_count }} Tours Found</h2>
                     </div>
                 </div>
             </div>
@@ -281,21 +281,25 @@
                         <div class="col-lg-12">
                             <div class="pagination_area">
                                 <ul class="pagination">
+                                    {% if tours.has_previous %}
                                     <li class="page-item">
-                                        <a class="page-link" href="#" aria-label="Previous">
+                                        <a class="page-link" href="?page={{ tours.previous_page_number}}" aria-label="Previous">
                                             <span aria-hidden="true">&laquo;</span>
                                             <span class="sr-only">Previous</span>
                                         </a>
                                     </li>
-                                    <li class="page-item"><a class="page-link" href="#">1</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                    <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                    {% endif %}
+                                    {% for i in tours.paginator.page_range %}
+                                    <li class="page-item"><a class="page-link" href="?page={{i}}">{{i}}</a></li>
+                                    {% endfor %}
+                                    {% if tours.has_next %}
                                     <li class="page-item">
-                                        <a class="page-link" href="#" aria-label="Next">
+                                        <a class="page-link" href="?page={{tours.next_page_number}}" aria-label="Next">
                                             <span aria-hidden="true">&raquo;</span>
                                             <span class="sr-only">Next</span>
                                         </a>
                                     </li>
+                                    {% endif %}
                                 </ul>
                             </div>
                         </div>
