--- a/tour/templates/tour/tourdetails.html
+++ b/tour/templates/tour/tourdetails.html
@@ -574,84 +574,26 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="promotional_tour_slider owl-theme owl-carousel dot_style">
+                    {% for tour in top_tours %}
                     <div class="top_destinations_box img_hover">
                         <div class="heart_destinations">
                             <i class="fas fa-heart"></i>
                         </div>
-                        <a href="top-destinations-details.html"><img src="/static/assets/img/destination/main-page6.png"
+                        <a href="{% url 'outbound-detail' city.slug %}"><img src="{{tour.thumbnail.url}}"
                                 alt="img"></a>
-                        <div class="top_destinations_box_content">
-                            <h4><a href="top-destinations-details.html">Kathmundu</a></h4>
-                            <p><span class="review_rating">4.8/5 Excellent</span> <span class="review_count">(1214
-                                    reviewes)</span></p>
-                            <h3>$99.00 <span>Price starts from</span></h3>
-                        </div>
+                                <div class="top_destinations_box_content">
+                                    <h4 ><a href="{% url 'outbound-detail' tour.slug %}">{{ city.name }} </a></h4>
+                                    <p><span class="review_rating">{{ tour.duration }}H</span> <span
+                                            class="review_count"></span></p>
+                                            {% for price in tour.price.all %}
+                                    <h3>{{ price.child_price}} <sup>AED</sup> <span>Price starts from</span></h3> {% endfor %}
+                                </div>
                     </div>
-                    <div class="top_destinations_box img_hover">
-                        <div class="heart_destinations">
-                            <i class="fas fa-heart"></i>
-                        </div>
-                        <a href="top-destinations-details.html"><img src="/static/assets/img/destination/main-page5.png"
-                                alt="img"></a>
-                        <div class="top_destinations_box_content">
-                            <h4><a href="top-destinations-details.html">Himalaya</a></h4>
-                            <p><span class="review_rating">4.8/5 Excellent</span> <span class="review_count">(1214
-                                    reviewes)</span></p>
-                            <h3>$99.00 <span>Price starts from</span></h3>
-                        </div>
-                    </div>
-                    <div class="top_destinations_box img_hover">
-                        <div class="heart_destinations">
-                            <i class="fas fa-heart"></i>
-                        </div>
-                        <a href="top-destinations-details.html"><img src="assets/img/destination/main-page4.png"
-                                alt="img"></a>
-                        <div class="top_destinations_box_content">
-                            <h4><a href="top-destinations-details.html">Beautiful darjeeling</a></h4>
-                            <p><span class="review_rating">4.8/5 Excellent</span> <span class="review_count">(1214
-                                    reviewes)</span></p>
-                            <h3>$99.00 <span>Price starts from</span></h3>
-                        </div>
-                    </div>
-                    <div class="top_destinations_box img_hover">
-                        <div class="heart_destinations">
-                            <i class="fas fa-heart"></i>
-                        </div>
-                        <a href="top-destinations-details.html"><img src="/static/assets/img/destination/main-page3.png"
-                                alt="img"></a>
-                        <div class="top_destinations_box_content">
-                            <h4><a href="top-destinations-details.html">Annapurna</a></h4>
-                            <p><span class="review_rating">4.8/5 Excellent</span> <span class="review_count">(1214
-                                    reviewes)</span></p>
-                            <h3>$99.00 <span>Price starts from</span></h3>
-                        </div>
-                    </div>
-                    <div class="top_destinations_box img_hover">
-                        <div class="heart_destinations">
-                            <i class="fas fa-heart"></i>
-                        </div>
-                        <a href="top-destinations-details.html"><img src="/static/assets/img/destination/main-page2.png"
-                                alt="img"></a>
-                        <div class="top_destinations_box_content">
-                            <h4><a href="top-destinations-details.html">Explore china</a></h4>
-                            <p><span class="review_rating">4.8/5 Excellent</span> <span class="review_count">(1214
-                                    reviewes)</span></p>
-                            <h3>$99.00 <span>Price starts from</span></h3>
-                        </div>
-                    </div>
-                    <div class="top_destinations_box img_hover">
-                        <div class="heart_destinations">
-                            <i class="fas fa-heart"></i>
-                        </div>
-                        <a href="top-destinations-details.html"><img src="/static/assets/img/destination/main-page1.png"
-                                alt="img"></a>
-                        <div class="top_destinations_box_content">
-                            <h4><a href="top-destinations-details.html">Ancient egypt</a></h4>
-                            <p><span class="review_rating">4.8/5 Excellent</span> <span class="review_count">(1214
-                                    reviewes)</span></p>
-                            <h3>$99.00 <span>Price starts from</span></h3>
-                        </div>
-                    </div>
+                    {% endfor %}
+                    
+                    
+                    
+                   
                 </div>
             </div>
         </div>
